--- a/static/styles.css
+++ b/static/styles.css
@@ -198,5 +198,19 @@ body {
     display: inline-block;
     border-radius: 19px;
     padding: 0 8px;
-    margin: 2px 4px;
+    margin-right: 4px;
+    margin-top: 4px;
+}
+
+/* ... */
+
+.radio-lyrics-url {
+    display: inline-block;
+    margin-top: 8px;
+    font-size: 12px;
+    color: #c21a29;
+}
+
+.radio-lyrics-url.no-lyrics-url {
+    display: none;
 }
