--- a/static/styles.css
+++ b/static/styles.css
@@ -202,15 +202,16 @@ body {
     margin-top: 4px;
 }
 
-/* ... */
+/* .radio-url */
 
-.radio-lyrics-url {
+.radio-url {
     display: inline-block;
     margin-top: 8px;
     font-size: 12px;
     color: #c21a29;
+    margin-right: 2px;
 }
 
-.radio-lyrics-url.no-lyrics-url {
+.radio-url.no-url {
     display: none;
 }
