--- a/static/styles.css
+++ b/static/styles.css
@@ -210,6 +210,8 @@ body {
     font-size: 12px;
     color: #c21a29;
     margin-right: 2px;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .radio-url.no-url {
