--- a/static/styles.css
+++ b/static/styles.css
@@ -292,7 +292,7 @@ body {
     height: 100%;
     transform-origin: 100% 50%;
     position: absolute;
-    background: #c21a29;
+    background-color: #c21a29;
 }
 
 .radio-pie-spinner {
@@ -316,4 +316,22 @@ body {
     background: inherit;
     opacity: 1;
     z-index: 300;
+}
+
+.radio-pie.radio-pie-indeterminate {
+    border-radius: 100%;
+    background: #c21a29;
+    animation: radio-pie-indeterminate 0.3s infinite alternate
+}
+
+.radio-pie.radio-pie-indeterminate .radio-pie-spinner,
+.radio-pie.radio-pie-indeterminate .radio-pie-filler,
+.radio-pie.radio-pie-indeterminate .radio-pie-mask {
+    background-color: transparent;
+}
+
+
+@keyframes radio-pie-indeterminate {
+    from { background-color: #c21a29; }
+    to { background-color: #90121b; }
 }
