--- a/static/styles.css
+++ b/static/styles.css
@@ -375,3 +375,67 @@ body {
     from { background-color: #c21a29; }
     to { background-color: #90121b; }
 }
+
+/* a.btn-sign-in-google */
+
+a.btn-sign-in-google {
+    display: inline-block;
+    width: 191px;
+    height: 46px;
+    transform: scale(0.8, 0.8);
+    background-image: url("btn_google_signin_normal.png");
+}
+
+.btn-sign-in-google {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+
+a.btn-sign-in-google:focus {
+    background-image: url("btn_google_signin_focus.png");
+}
+
+
+a.btn-sign-in-google:active {
+    background-image: url("btn_google_signin_pressed.png");
+}
+
+/* .user-panel */
+
+.user-panel {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+
+.user-avatar {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    margin-right: 12px;
+}
+
+.user-name {
+    color: #fff;
+    font-size: 14px;
+}
+
+.user-email {
+    color: #aaa;
+    font-size: 12px;
+}
+
+.btn-logout {
+    float: right;
+    margin-top: 8px;
+    text-decoration: underline;
+    font-size: 12px;
+    color: #c21a29;
+    letter-spacing: 0.06em;
+    font-weight: 600;
+}
+
+.btn-logout:active {
+    color: #90121b;
+}
