--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: #000;
+    color: #fff;
     padding-top: 24px;
     font-family: 'Open Sans', sans-serif;
 }
@@ -113,6 +114,7 @@ body {
 .radio-panel .radio-panel-content {
     border-radius: 2px;
     background-color: #fff;
+    color: #231f20;
     padding: 16px;
     padding-top: 24px;
     box-shadow: 0 2px 32px rgba(255,255,255,0.25);
@@ -262,6 +264,7 @@ body {
     border-radius: 2px;
     padding: 16px;
     background-color: #fff;
+    color: #231f20;
     font-size: 14px;
 }
 
