--- a/static/styles.css
+++ b/static/styles.css
@@ -429,16 +429,28 @@ a.btn-sign-in-google:active {
     font-size: 12px;
 }
 
-.btn-logout {
+.user-actions {
     float: right;
     margin-top: 8px;
+}
+
+.btn-link {
     text-decoration: underline;
     font-size: 12px;
     color: #c21a29;
     letter-spacing: 0.06em;
-    font-weight: 600;
+    font-weight: bold;
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
 
-.btn-logout:active {
+.btn-link:active {
     color: #90121b;
+}
+
+.btn-link-separator {
+    color: #ddd;
+    font-size: 12px;
 }
