--- a/static/styles.css
+++ b/static/styles.css
@@ -466,25 +466,23 @@ a.btn-sign-in-google:active {
 
 /* .btn-favorite-add */
 
-.btn-favorite-add {
+.btn-favorite-control {
     float: right;
     margin-top: -8px;
     margin-right: 16px;
+    /*width: 24px;*/
+    /*height: 24px;*/
 }
 
-.btn-favorite-add.radio-placeholder {
+.btn-favorite-control.radio-placeholder {
     display: none;
 }
 
-.btn-favorite-add .favorite-add-icon:hover {
-    visibility: hidden;
-    position: relative;
+.btn-favorite-control.favorite-add i.material-icons::after {
+    content: "favorite_border";
 }
 
-.btn-favorite-add .favorite-add-icon:hover::after {
+.btn-favorite-control.favorite-add i.material-icons:hover::after {
     content: "favorite";
-    visibility: visible;
-    position: absolute;
-    left: 0;
 }
 
