--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("modal.css");
 
 body {
     background-color: #000;
