Adding link for play all favorites song in anonymous playlist on YouTube

--- a/static/modal.css
+++ b/static/modal.css
@@ -4,6 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
     background-color: rgba(0, 0, 0, 0.67);
     z-index: 100;
 }
@@ -16,6 +17,7 @@
     background-color: #fff;
     color: #231f20;
     margin: 0 auto;
+    margin-bottom: 32px;
     padding: 16px;
     border-radius: 2px;
     box-shadow: 0 2px 8px rgba(255,255,255,0.3);
