--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,9 @@ body {
     background-color: #000;
     color: #fff;
     padding-top: 24px;
+}
+
+* {
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -671,6 +674,45 @@ ul.radio-favorites-list {
 
 .radio-edit-value-highlight {
     color: #c21a29;
+}
+
+.radio-favorite-edit-actions-row {
+    margin-top: 16px;
+}
+
+.radio-favorite-edit-actions-row .radio-btn {
+    margin-left: 8px;
+}
+
+/* .radio-btn */
+
+.radio-btn {
+    outline: none;
+    background: none;
+    border: none;
+    padding: 8px 12px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #231f20;
+    border-radius: 2px;
+    transition: background-color 0.1s, color 0.1s;
+    cursor: pointer;
+}
+
+.radio-btn.radio-btn-primary {
+    color: #c21a29;
+}
+
+.radio-btn:hover {
+    background-color: #f0f0f0;
+}
+
+.radio-btn:active {
+    background-color: #d0d0d0;
+}
+
+.radio-btn.radio-btn-primary:active {
+    color: #90121b;
 }
 
 /* .radio-dropdown-menu */
