--- a/static/styles.css
+++ b/static/styles.css
@@ -645,14 +645,18 @@ ul.radio-favorites-list {
 .radio-favorite-edit-form {
     flex: 100%;
     border-bottom: 1px solid #d8d8d8;
-    padding: 16px;
+    padding: 0 16px 16px;
     margin: 0 -16px 8px;
+    width: 100%;
 }
 
 .radio-favorite-edit-label {
+    display: block;
     font-weight: 600;
-    margin-right: 8px;
     transition: color 0.3s;
+    margin-top: 16px;
+    font-size: 12px;
+    color: #555555;
 }
 
 .radio-favorite-edit-label.radio-favorite-edit-label-highlight {
@@ -661,14 +665,26 @@ ul.radio-favorites-list {
 
 .radio-edit-value[contenteditable] {
     outline: none;
-    padding: 2px 8px;
+    padding: 6px 0;
     border-bottom: 2px solid #ccc;
-    color: #555;
     transition: border-bottom-color 0.3s, color 0.3s;
+    overflow-x: hidden;
+    white-space: nowrap;
+    color: #231f20;
+    cursor: text;
+}
+
+.radio-edit-value[contenteditable]:empty:before {
+    content: attr(data-placeholder);
+    display: block; /* For Firefox */
+    color: #aaa;
+}
+
+.radio-edit-value[contenteditable]:hover {
+    border-bottom-color: #333;
 }
 
 .radio-edit-value[contenteditable]:focus {
-    color: #231f20;
     border-bottom-color: #c21a29;
 }
 
