--- a/static/styles.css
+++ b/static/styles.css
@@ -700,6 +700,17 @@ ul.radio-favorites-list {
     margin-left: 8px;
 }
 
+.radio-favorite-list-empty-state {
+    padding-top: 16px;
+}
+
+.radio-favorite-list-empty-state i {
+    color: #ccc;
+    font-size: 48px;
+    margin: 0 24px 16px 16px;
+    float: left;
+}
+
 /* .radio-btn */
 
 .radio-btn {
