--- a/static/styles.css
+++ b/static/styles.css
@@ -552,8 +552,8 @@ body {
     left: 0;
     right: 0;
 
-    border-top: 1px #231f20 solid;
     margin: 0;
+    background-color: #070707;
     color: #555;
     font-size: 14px;
     padding: 8px;
