--- a/static/styles.css
+++ b/static/styles.css
@@ -795,6 +795,7 @@ ul.radio-dropdown-menu {
     left: 88px;
     top: 6px;
     margin-left: 8px;
+    height: 24px;
 }
 
 .radio-toolbar-btn {
@@ -812,4 +813,8 @@ ul.radio-dropdown-menu {
 
 .radio-toolbar-btn:hover {
     color: #000;
+}
+
+.radio-toolbar .radio-volume-control > svg {
+    height: 24px;
 }
