--- a/static/styles.css
+++ b/static/styles.css
@@ -819,6 +819,55 @@ ul.radio-dropdown-menu {
     height: 24px;
 }
 
+/* .radio-volume-icon */
+
+.radio-volume-icon {
+    cursor: pointer;
+}
+
+.radio-volume-icon .cover {
+    fill: #444;
+}
+
+.radio-volume-icon .inner-circle,
+.radio-volume-icon .outer-circle {
+    stroke: #444;
+}
+
+.radio-volume-icon .first-muted-line {
+    fill: #444;
+}
+
+.radio-volume-icon .second-muted-line {
+    fill: #fff;
+}
+
+.radio-volume-icon:hover .cover {
+    fill: #111;
+}
+
+.radio-volume-icon:hover .inner-circle,
+.radio-volume-icon:hover .outer-circle {
+    stroke: #111;
+}
+
+.radio-volume-icon:hover .first-muted-line {
+    fill: #111;
+}
+
+.radio-volume-icon:active .cover {
+    fill: #90121b;
+}
+
+.radio-volume-icon:active .inner-circle,
+.radio-volume-icon:active .outer-circle {
+    stroke: #90121b;
+}
+
+.radio-volume-icon:active .first-muted-line {
+    fill: #90121b;
+}
+
 /* .radio-volume-range */
 
 /* clear all styles from browser */
