--- a/static/styles.css
+++ b/static/styles.css
@@ -796,7 +796,8 @@ ul.radio-dropdown-menu {
     position: absolute;
     left: 88px;
     top: 6px;
-    margin-left: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
     height: 24px;
 }
 
@@ -834,7 +835,8 @@ ul.radio-dropdown-menu {
 }
 
 .radio-volume-control:hover .radio-volume-range,
-.radio-volume-control .radio-volume-range:active {
+.radio-volume-control .radio-volume-range:active,
+.radio-volume-control.radio-volume-control-extended .radio-volume-range {
     opacity: 1;
     width: 100px;
 }
