--- a/static/styles.css
+++ b/static/styles.css
@@ -102,12 +102,45 @@ body {
 }
 
 .radio-toggle-play.radio-stream-loading {
-    animation: radio-toggle-play-loading 0.3s infinite alternate
+    animation: radio-toggle-play-loading-translate 0.3s infinite alternate ease-out;
 }
 
-@keyframes radio-toggle-play-loading {
-    from { border-color: #231f20; }
-    to { border-color: #fff; }
+@keyframes radio-toggle-play-loading-translate{
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(-8px);
+    }
+}
+
+.radio-toggle-play.radio-stream-loading:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 100%;
+    animation: radio-toggle-play-loading-shadow 1.8s infinite ease-out;
+}
+
+@keyframes radio-toggle-play-loading-shadow {
+    0% {
+        opacity: 0;
+    }
+    49% {
+        opacity: 0.67;
+    }
+    50% {
+        opacity: 0.67;
+        transform: scale(1, 1);
+    }
+    100% {
+        transform: scale(3, 3);
+        opacity: 0;
+    }
 }
 
 /* .radio-panel */
@@ -847,7 +880,7 @@ ul.radio-dropdown-menu {
 .radio-volume-control .radio-volume-range {
     width: 0;
     opacity: 0;
-    transition: width 300ms ease-out, opacity 150ms ease-in;
+    transition: width 0.3s ease-out, opacity 150ms ease-in;
 }
 
 .radio-volume-control .radio-volume-range:active,
